--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  background-color: rgb(254, 199, 34);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
