--- a/src/components/MainContent/ShopContainer/ShopContainer.scss
+++ b/src/components/MainContent/ShopContainer/ShopContainer.scss
@@ -1,38 +1,8 @@
 .shopContainer {
     width: 1440px;
-    &__header {
-        display: flex;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: justify;
-        justify-content: space-between;
-        height: 4.375rem;
-        padding: 0.625rem 4.5rem;
-        background: rgb(255, 101, 0);
-
-        &__title {
-            color: rgb(255, 255, 255);
-            font-weight: bolder;
-            font-size: 20px;
-            text-transform: uppercase;
-        }
-
-        &__timer {
-            color: rgb(255, 255, 255);
-            font-weight: bolder;
-            font-size: 20px;
-            text-transform: uppercase;
-        }
-    }
-
-    &__image {
-        height: 310px;
-        position: relative;
-        z-index: -1;
-    }
-
-    &__content {
+    &__mainProducts {
         height: 3440px;
-        background: white;
+        background: #F2F3F4;
+        padding: 30px 56px 20px 56px;
     }
 }
